[package]
name = "ci-transfer"
version = "0.1.6"
edition = "2021"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
ssh2 = "0.9"
base64 = "0.22.1"
aliyun-oss-rust-sdk = { version = "0.2.1", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"