[package]
name = "oss-res"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
base64 = "0.22.1"
aliyun-oss-rust-sdk = { version = "0.2.1", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
md5 = "0.7.0"